# python-django-tests

./: .gitignore  .pylintrc  Dockerfile  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.docker/: entrypoint.sh
.docker/zsh/powerlevel10k/: .p10k.zsh
src/core/domain/__seedwork/: entities.py  event.py  event_test.py  notification.py
src/core/domain/category/: entities.py  repositories.py  repositories_test.py  validator_test.py  validators.py
src/core/infrastructure/django/category/: apps.py
src/core/infrastructure/in_memory/category/: repositories.py  repositories_test.py
src/core/infrastructure/presenters/: category_presenter.py  category_presenter_test.py
src/core/usecase/__seedwork/: dto.py  dto_test.py
src/core/usecase/category/: dto.py  dto_test.py  use_cases.py  use_cases_test.py
src/django_boot/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
video_library/: manage.py
video_library/__seedwork/: dto.py  dto_test.py  entities.py  entities_test.py  exceptions.py  repositories.py  repositories_test.py  use_cases.py  use_cases_test.py  validators.py  validators_test.py  value_objects.py  value_objects_test.py
video_library/category/: category.py  category_test.py  dto.py  dto_test.py  entities.py  entities_test.py  repositories.py  repositories_test.py  use_cases.py  use_cases_test.py  validator.py  validator_test.py
video_library/domain/__seedwork/: entities_test.py  notification.py  notification_test.py  notifications_test.py  repositories.py  repositories_test.py  validators_test.py  value_objects_test.py
video_library/domain/category/: entities.py  entities_test.py  repositories.py  repositories_test.py  validators.py
video_library/infra/category/: repositories.py  repositories_test.py
video_library/infrastructure/api/presenters/: category_presenter.py  category_presenter_test.py
video_library/infrastructure/category/: repositories.py  repositories_test.py
video_library/usecase/__seedwork/: dto.py  dto_test.py
video_library/usecase/category/: dto.py  dto_test.py  use_cases.py  use_cases_test.py
video_library/video_library/: asgi.py  settings.py  urls.py  wsgi.py
