[project]
name = ""
version = ""
description = ""
authors = [
    {name = "titohazin", email = "titohazin@gmail.com"},
]
dependencies = [
    "django==3.2.13",
    "autopep8>=1.6.0",
    "flake8>=4.0.1",
    "djangorestframework>=3.13.1",
]
requires-python = ">=3.10.4"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true


[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.1.2"]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
