[project]
name = ""
version = ""
description = ""
authors = [
    {name = "titohazin", email = "titohazin@gmail.com"},
]
dependencies = [
    "django==3.2.13",
    "autopep8>=1.6.0",
    "flake8>=4.0.1",
    "djangorestframework>=3.13.1"]
requires-python = ">=3.10.4"
license = {text = "MIT"}

[project.optional-dependencies]

[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.1.2",
    "pytest-cov>=3.0.0",
]

[tool.pdm.scripts]
flake8 = "flake8 --max-line-length=100 ./video_library/" # Using FLAKE8 instead of PYLINT
pep8 = "autopep8 --in-place --recursive"
test = "pytest --ignore ./__pypackages__"
test-cov = "pdm run test --cov ./video_library --cov-fail-under=80"
test-cov-report = "pdm run test-cov --cov-report html:./.htmlcov"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
